scripts/k8s/type-11.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: type-11
spec:
  replicas: 1
  selector:
    matchLabels:
      app: type-11
  template:
    metadata:
      labels:
        app: type-11
    spec:
      containers:
        - name: envoy
          image: cr.yandex/crp5pl9kfv4iu048v00l/envoy:31.05.2024
          volumeMounts:
            - name: envoy-config
              mountPath: /etc/envoy/envoy.yaml
              subPath: envoy.yaml
        - name: type-11
          image: quay.io/timattt/type-11:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 9090
          env:
            - name: TYPE11_JWKS
              value: http://type-6.default.svc.cluster.local:443/oauth2/jwks
            - name: TYPE11_POSTGRES_USER
              value: default-user
            - name: TYPE11_POSTGRES_URL
              valueFrom:
                secretKeyRef:
                  name: type-6-basic-secrets
                  key: type_6_database_jdbc_url
            - name: TYPE11_POSTGRES_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: type-6-basic-secrets
                  key: type_6_database_password
      volumes:
        - name: envoy-config
          configMap:
            name: envoy-config
            items:
              - key: envoy.yaml
                path: envoy.yaml
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: envoy-config
data:
  envoy.yaml: |
    static_resources:
      listeners:
        - name: listener_0
          address:
            socket_address: { address: 0.0.0.0, port_value: 8080 }
          filter_chains:
            - filters:
                - name: envoy.filters.network.http_connection_manager
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                    codec_type: auto
                    stat_prefix: ingress_http
                    route_config:
                      name: local_route
                      virtual_hosts:
                        - name: local_service
                          domains: ["*"]
                          routes:
                            - match: { prefix: "/" }
                              route:
                                cluster: messenger_service
                                max_stream_duration:
                                  grpc_timeout_header_max: 0s
                          cors:
                            allow_origin_string_match:
                              - prefix: "*"
                            allow_methods: GET, PUT, DELETE, POST, OPTIONS
                            allow_headers: keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,custom-header-1,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout,authorization
                            max_age: "1728000"
                            expose_headers: custom-header-1,grpc-status,grpc-message
                    http_filters:
                      - name: envoy.filters.http.grpc_web
                        typed_config:
                          "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_web.v3.GrpcWeb
                      - name: envoy.filters.http.cors
                        typed_config:
                          "@type": type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors
                      - name: envoy.filters.http.router
                        typed_config:
                          "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
      clusters:
        - name: messenger_service
          connect_timeout: 0.25s
          type: logical_dns
          # HTTP/2 support
          typed_extension_protocol_options:
            envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
              "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
              explicit_http_config:
                http2_protocol_options: {}
          lb_policy: round_robin
          load_assignment:
            cluster_name: cluster_0
            endpoints:
              - lb_endpoints:
                  - endpoint:
                      address:
                        socket_address:
                          address: 127.0.0.1
                          port_value: 9090
